--- a/layouts/partials/disqus.html
+++ b/layouts/partials/disqus.html
@@ -1,8 +1,8 @@
 <div id="disqus_thread"></div>
 <script>
     (function() {
-        var d = document, s = d.createElement('script');
-        s.src = '//tsvetkovio.disqus.com/embed.js'; 
+        var d = document, s = d.createElement('script'), disqus_shortname = '{{ .Site.Params.disqusShortname }}';
+        s.src = '//' + disqus_shortname + '.disqus.com/embed.js';
         s.setAttribute('data-timestamp', +new Date());
         (d.head || d.body).appendChild(s);
     })();
